# LearnFFmpeg

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_ffmpeg_with_nvidia_gpu.md
FFmpeg60/: readme.md
build_ffmpeg_with_nvidia_gpu/: build_ffmpeg_with_nvidia_gpu.md
common/: common.cpp  common.h  convert.cpp  convert.h
common/Audio/: AudioHelper.cpp  AudioHelper.h
common/FFmpeg/: ColorSpace.cu  ColorSpace.h  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegHwDecoderHelper.cpp  FFmpegHwDecoderHelper.h
common/SDL2/: SDLApp.cpp  SDLApp.h  SDLWindow.cpp  SDLWindow.h
common/SDL2/RenderHelper/: OpenGLRenderHelper.cpp  OpenGLRenderHelper.h  RenderHelper.h  SDLRenderHelper.cpp  SDLRenderHelper.h  opengl_error.cpp  opengl_error.h
player/: CMakeLists.txt  playerv1.cpp
simplest_ffmpeg_player/: CMakeLists.txt  hw_decode.cpp  readme.md  sdl_pcm_player.cpp  simplest_ffmpeg_audio_decoder.cpp  simplest_ffmpeg_decoder.cpp  simplest_ffmpeg_decoder_pure.cpp  simplest_ffmpeg_decoder_v1.cpp  simplest_ffmpeg_player.cpp  simplest_ffmpeg_player_su.cpp  simplest_video_play_sdl2.cpp  test_player.cpp
