
cmake_minimum_required(VERSION 3.25)

project(LearnFFmpeg VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)

set(FFMPEG_BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/FFmpeg60")
set(FFMPEG_INCLUDE_DIR "${FFMPEG_BASE_DIR}/include") 
set(FFMPEG_LIB_DIR "${FFMPEG_BASE_DIR}/lib")
set(FFMPEG_BIN_DIR "${FFMPEG_BASE_DIR}/bin")

set(COMMON_FILE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/common")
file(GLOB COMMON_SOURCE_FILES 
	"${COMMON_FILE_DIR}/*.h"
	"${COMMON_FILE_DIR}/*.cpp"
)
file(GLOB COMMON_SDL_SOURCE_FILES
	"${COMMON_FILE_DIR}/SDL2/*.h"
	"${COMMON_FILE_DIR}/SDL2/*.cpp"
)
file(GLOB COMMON_FFMPEG_SOURCE_FILES
	"${COMMON_FILE_DIR}/FFmpeg/*.h"
	"${COMMON_FILE_DIR}/FFmpeg/*.cpp"
)

message("CMAKE_CURRENT_SOURCE_DIR == " ${CMAKE_CURRENT_SOURCE_DIR})

list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/SDL2-2.26.4)
find_package(SDL2 REQUIRED)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")
add_subdirectory(simplest_ffmpeg_player)

file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")
file(COPY_FILE "${FFMPEG_BIN_DIR}/avcodec-60.dll" "${CMAKE_CURRENT_BINARY_DIR}/bin/avcodec-60.dll" ONLY_IF_DIFFERENT)
file(COPY_FILE "${FFMPEG_BIN_DIR}/avdevice-60.dll" "${CMAKE_CURRENT_BINARY_DIR}/bin/avdevice-60.dll" ONLY_IF_DIFFERENT)
file(COPY_FILE "${FFMPEG_BIN_DIR}/avfilter-9.dll" "${CMAKE_CURRENT_BINARY_DIR}/bin/avfilter-9.dll" ONLY_IF_DIFFERENT)
file(COPY_FILE "${FFMPEG_BIN_DIR}/avformat-60.dll" "${CMAKE_CURRENT_BINARY_DIR}/bin/avformat-60.dll" ONLY_IF_DIFFERENT)
file(COPY_FILE "${FFMPEG_BIN_DIR}/avutil-58.dll" "${CMAKE_CURRENT_BINARY_DIR}/bin/avutil-58.dll" ONLY_IF_DIFFERENT)
file(COPY_FILE "${FFMPEG_BIN_DIR}/postproc-57.dll" "${CMAKE_CURRENT_BINARY_DIR}/bin/postproc-57.dll" ONLY_IF_DIFFERENT)
file(COPY_FILE "${FFMPEG_BIN_DIR}/swresample-4.dll" "${CMAKE_CURRENT_BINARY_DIR}/bin/swresample-4.dll" ONLY_IF_DIFFERENT)
file(COPY_FILE "${FFMPEG_BIN_DIR}/swscale-7.dll" "${CMAKE_CURRENT_BINARY_DIR}/bin/swscale-7.dll" ONLY_IF_DIFFERENT)
file(COPY_FILE "${SDL2_BINDIR}/SDL2.dll" "${CMAKE_CURRENT_BINARY_DIR}/bin/SDL2.dll" ONLY_IF_DIFFERENT)
