
cmake_minimum_required(VERSION 3.25)

project(LearnFFmpeg VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 17)

set(FFMPEG_BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/FFmpeg60")
set(FFMPEG_INCLUDE_DIR "${FFMPEG_BASE_DIR}/include") 
set(FFMPEG_LIB_DIR "${FFMPEG_BASE_DIR}/lib")
set(FFMPEG_BIN_DIR "${FFMPEG_BASE_DIR}/bin")

set(GLEW_BASE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/glew-2.2.0")
set(GLEW_INCLUDE_DIR "${GLEW_BASE_DIR}/include")
set(GLEW_LIB_DIR "${GLEW_BASE_DIR}/lib/Release/x64")
set(GLEW_BIN_DIR "${GLEW_BASE_DIR}/bin/Release/x64")

set(COMMON_FILE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/common")
file(GLOB COMMON_SOURCE_FILES 
	"${COMMON_FILE_DIR}/common.h"
	"${COMMON_FILE_DIR}/common.cpp"
)
file(GLOB COMMON_CONVERT_FILES
	"${COMMON_FILE_DIR}/convert.h"
	"${COMMON_FILE_DIR}/convert.cpp"
)
file(GLOB COMMON_SDL_SOURCE_FILES
	"${COMMON_FILE_DIR}/SDL2/*.h"
	"${COMMON_FILE_DIR}/SDL2/*.cpp"
)
file(GLOB COMMON_RENDERHELPER_SOURCE_FILES
	"${COMMON_FILE_DIR}/SDL2/RenderHelper/*.h"
	"${COMMON_FILE_DIR}/SDL2/RenderHelper/*.cpp"
)
file(GLOB COMMON_AUDIO_SOURCE_FILES
	"${COMMON_FILE_DIR}/Audio/*.h"
	"${COMMON_FILE_DIR}/Audio/*.cpp"
)
file(GLOB COMMON_FFMPEG_SOURCE_FILES
	"${COMMON_FILE_DIR}/FFmpeg/*.h"
	"${COMMON_FILE_DIR}/FFmpeg/*.cpp"
)

message("CMAKE_CURRENT_SOURCE_DIR == " ${CMAKE_CURRENT_SOURCE_DIR})

list(APPEND CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR}/SDL2-2.26.4)
find_package(SDL2 REQUIRED)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")
add_subdirectory(simplest_ffmpeg_player)
add_subdirectory(player)

file(MAKE_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")
file(COPY "${FFMPEG_BIN_DIR}/" DESTINATION ./bin/ FILES_MATCHING PATTERN "*.dll")
file(COPY "${SDL2_BINDIR}/" DESTINATION ./bin/ FILES_MATCHING PATTERN "*.dll")
file(COPY "${GLEW_BIN_DIR}/" DESTINATION ./bin/ FILES_MATCHING PATTERN "*.dll")
